[build-system]
requires = ["setuptools>=57.0.0", "wheel>=0.31.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/epicosy/nexus"
"Bug Tracker" = "https://github.com/epicosy/nexus/issues"

[project]
name = "nexus"
version = "0.0.1"
description = "Framework for benchmarking Automatic Program Repair tools"
readme = "README.md"
authors = [
    {name = "Eduard Pinconschi", email = "eduard.pinconschi@tecnico.ulisboa.pt"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]

dependencies = [
    "cement>=3.0.4",
    "jinja2",
    "pyyaml",
    "colorlog",
    "psutil>=5.8.0",
    "docker>=5.0.0",
    "tabulate>=0.8.9",
    "SQLAlchemy==1.4.22",
    "psycopg2>=2.9.1",
    "requests>=2.25.1",
    "websockets==10.1",
    "GitPython>=3.1.24",
    "SQLAlchemy-Utils==0.37.9",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage",
    "twine>=1.11.0",
    "setuptools>=38.6.0",
    "wheel>=0.31.0",
]

[project.scripts]
nexus = "nexus.main:main"

[tool.setuptools]
packages = {find = {exclude = ["ez_setup", "tests*"]}}
include-package-data = false
